CaseImplementation feat: Ajustes finais do projeto - V2